--- a/src/main/resources/static/view/NewFile.html
+++ b/src/main/resources/static/view/NewFile.html
@@ -15,11 +15,13 @@
 .nonactive {
 	background: red;
 }
+
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+	transition: opacity .5s;
 }
+
 .fade-enter, .fade-leave-to {
-  opacity: 0;
+	opacity: 0;
 }
 </style>
 </head>
@@ -27,7 +29,8 @@
 	${map}
 	<div id="vue_det">
 		<h1 v-bind:class="classObject()">site : {{site}}</h1>
-		<h1>url : {{url}}</h1>m
+		<h1>url : {{url}}</h1>
+		m
 		<h1 v-bind:align="align">{{url|reverse}}</h1>
 		<h1 v-if="boo">{{details()}}</h1>
 
@@ -49,13 +52,16 @@
 
 		<!-- router exit -->
 		<transition name="fade"> <router-view></router-view> </transition>
-		
+		<component-a v-for="post in posts" :id="post.id"
+			:posttitle="post.postTitle"></component-a>
 
 	</div>
-	<form action = "http://localhost:8080/response" method="get" >
-		<input type= "text" name="a"/>
-		<input type="submit" value = "submit"/>
+
+	<form action="http://localhost:8080/response" method="get">
+		<input v-foucs type="text" name="a" /> <input type="submit"
+			value="submit" />
 	</form>
+
 </body>
 <script type="text/javascript">
 	const Foo = { template: 
@@ -86,6 +92,7 @@
 		  routes: routes 
 		})
 	Vue.prototype.axios = axios;
+	
 	var vm = new Vue({
 
 		el : '#vue_det',
@@ -101,6 +108,10 @@
 			boo : false,
 			array: ["a1","a2","a3"],
 			isActive:true,
+			posts:[
+				{id:1,postTitle:"title1"},
+				{id:2,postTitle:"title2"},
+			]
 		},
 		filters :{
 			filter : function(age ){
@@ -110,6 +121,8 @@
 				return str.split('.').reverse().join('.');
 			},
 		},
+		
+		
 		
 		methods : {
 			details : function() {
@@ -150,6 +163,17 @@
 			}
 		}
 	})
+	Vue.component('component-a',{
+// 		data: function(){
+// 			return {
+// 				title:'compenent-a',
+// 				count:0,
+// 			}
+// 		},
+		props:['posttitle','posttitle2'],
+		template:'<div class="component-a"><h1>{{posttitle}}</h1></div>',
+		
+	});
 	//watch listner
 	vm.$watch('site',function(nval,oval){
 		alert(oval + "become" + nval);
